--- a/src/test/resources/persistence.properties
+++ b/src/test/resources/persistence.properties
@@ -1,12 +1,21 @@
 h2.tcp.enabled=true
 # jdbc.X
-jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/spring_hibernate_dev?createDatabaseIfNotExist=true
-jdbc.url=jdbc:mysql://localhost:3306/test
-jdbc.user=root
-jdbc.pass=Masoom_14
+# jdbc.url=jdbc:mysql://localhost:3306/test
+# jdbc.user=root
+# jdbc.pass=Masoom_14
+jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:mysql://localhost:3306/spring_hibernate_dev?createDatabaseIfNotExist=true
+# jdbc.url=jdbc:mysql://localhost:3306/test
+#jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.url=jdbc:sqlserver://localhost;databaseName=test
+jdbc.user=testUser
+jdbc.pass=Password_1
+
 
 # hibernate.X
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=none
