Updated practice project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 h2.tcp.enabled=true
 # jdbc.X
-#jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/spring_hibernate_dev?createDatabaseIfNotExist=true
-#jdbc.url=jdbc:mysql://localhost:3306/test
-#jdbc.user=root
-#jdbc.pass=admin
-jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.user=root
+jdbc.pass=admin
+#jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #jdbc.url=jdbc:mysql://localhost:3306/spring_hibernate_dev?createDatabaseIfNotExist=true
 # jdbc.url=jdbc:mysql://localhost:3306/test
 #jdbc.url=jdbc:mysql://localhost:3306/test
-jdbc.url=jdbc:sqlserver://localhost;databaseName=test;trustServerCertificate=true
-jdbc.user=sa
-jdbc.pass=Avanza123
+#jdbc.url=jdbc:sqlserver://localhost;databaseName=test
+#jdbc.user=sa
+#jdbc.pass=Avanza123
 
 
 # hibernate.X
