--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>designpatterns</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <repositories>
         <repository>
             <id>mssqlJDBC</id>
@@ -48,21 +53,35 @@
         <artifactId>javassist</artifactId>
         <version>3.18.2-GA</version>
     </dependency>
-<!--    <dependency>-->
-<!--        <groupId>mysql</groupId>-->
-<!--        <artifactId>mysql-connector-java</artifactId>-->
-<!--        <version>5.1.32</version>-->
-<!--        <scope>runtime</scope>-->
-<!--    </dependency>-->
+    <dependency>
+        <groupId>io.reactivex.rxjava2</groupId>
+        <artifactId>rxjava</artifactId>
+        <version>2.2.8</version>
+    </dependency>
+
+    <dependency>
+        <groupId>io.projectreactor</groupId>
+        <artifactId>reactor-core</artifactId>
+        <version>3.4.5</version>
+    </dependency>
+
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.11</version>
+        <scope>runtime</scope>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc -->
     <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
     <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+<!--
     <dependency>
         <groupId>com.microsoft.sqlserver</groupId>
         <artifactId>mssql-jdbc</artifactId>
         <version>8.1.0.jre8-preview</version>
         <scope>test</scope>
     </dependency>
+-->
 
     <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc_auth -->
     <dependency>
@@ -73,6 +92,13 @@
         <scope>runtime</scope>
         <type>dll</type>
     </dependency>
+
+    <dependency>
+        <groupId>com.microsoft.sqlserver</groupId>
+        <artifactId>mssql-jdbc</artifactId>
+        <version>10.2.0.jre11</version>
+    </dependency>
+
 
     <dependency>
         <groupId>org.apache.tomcat</groupId>
@@ -99,6 +125,26 @@
         <artifactId>surefire-junit4</artifactId>
         <version>2.12.4</version>
         <type>jar</type>
+    </dependency>
+
+    <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0-b170201.1204</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+    <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
+    <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>2.3.0-b170127.1453</version>
     </dependency>
 
 </dependencies>
