--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,9 +5,9 @@ jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #jdbc.url=jdbc:mysql://localhost:3306/spring_hibernate_dev?createDatabaseIfNotExist=true
 # jdbc.url=jdbc:mysql://localhost:3306/test
 #jdbc.url=jdbc:mysql://localhost:3306/test
-jdbc.url=jdbc:sqlserver://localhost;databaseName=test
-jdbc.user=testUser
-jdbc.pass=Password_1
+jdbc.url=jdbc:sqlserver://localhost;databaseName=test;trustServerCertificate=true
+jdbc.user=sa
+jdbc.pass=Avanza123
 
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
