Updated practice project to add more tests

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,4 @@ jdbc.pass=Avanza123
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=none
+hibernate.generate_statistics=true 
