Updated code to include testing for persistence, jdk 8 functional elements, and various data structures

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ jdbc.pass=admin
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=none
+hibernate.generate_statistics=true
+
+#Hibernate logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.stat=DEBUG
