--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,3 +14,10 @@ hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=none
 hibernate.generate_statistics=true 
+
+
+#Hibernate logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type=TRACE
+log4j.logger.org.hibernate.stat=DEBUG
